--- a/templates/index.html
+++ b/templates/index.html
@@ -546,7 +546,7 @@
                         <i class="fas fa-chart-line"></i> 모델 분석
                     </button>
                     <button class="tab" onclick="showTab('train')">
-                        <i class="fas fa-brain"></i> 알고리즘 개선
+                        <i class="fas fa-brain"></i> 알고리즘 개발
                     </button>
                 </div>
 
@@ -612,6 +612,11 @@
                                 <option value="5y">5년</option>
                                 <option value="10y">10년</option>
                             </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="trainModelName">모델 이름 지정</label>
+                            <input type="text" id="trainModelName" class="form-control" placeholder="예: my_first_model" required>
                         </div>
 
                         <button type="submit" id="trainBtn" class="btn btn-primary">
@@ -738,7 +743,7 @@
                     });
                 }
             } catch (err) {
-                showMessage('모델 목록을 불러오는 데 실패했습니다: ' + err.message);
+                showMessage('모델 목록을 불러오는 데 실패했습니다, 로그인 여부를 확인해 주십시오.: ' + err.message);
             }
         }
 
